--- a/introducao-javascript/index.html
+++ b/introducao-javascript/index.html
@@ -75,6 +75,9 @@
 
 		<section class="container">
     <h2 id="titulo-form">Adicionar novo paciente</h2>
+		<ul id="mensagens-erro">
+
+		</ul>
     <form id="form-adiciona">
         <div class="">
             <label for="nome">Nome:</label>
@@ -98,5 +101,6 @@
 </section>
 <script src="js/calcula-imc.js" ></script>
 <script src="js/form.js" ></script>
+<script src="js/remover-paciente.js" ></script>
 	</body>
 </html>
